# Warehouse_project

./: CMakeLists.txt  Exceptions.h  Goods.cpp  Goods.h  Jigger.cpp  Jigger.h  Product.cpp  Product.h  README.md  Warehouse.cpp  Warehouse.h  interface.cpp  interface.h  liquidGoods.cpp  liquidGoods.h  looseGoods.cpp  looseGoods.h  main.cpp  temat1.txt
